k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stocktrader
  namespace: stocktrader
spec:
  type: ClusterIP
  selector:
    app: stocktrader
  ports:
    - port: 5239
      targetPort: 5239
      protocol: TCP
      name: http
